--- a/content.tex
+++ b/content.tex
@@ -5,9 +5,9 @@
 
 \input{seismic-catalog}
 
-% \input{seismic_hazard}
+ \input{seismic_hazard}
 
-% \input{analysis_parameters}
+ \input{analysis_parameters}
 
 % \input{hazard_analysis_results}
 
