first general revision.

--- a/analysis_parameters.tex
+++ b/analysis_parameters.tex
@@ -70,8 +70,8 @@ Fig.~\ref{fig:comp_test_all_mag} illustrates the completeness of data for each m
 
 \begin{figure*} [!ht]
 \centering
-\includegraphics[scale=0.28]{figures/pdf/comp_test_all_mag.pdf} 
-\caption{Magnitude-time distribution of earthquakes in the study regions. a-b) Alborz, c-d) Azerbaijan, e-f)Kopek Dagh, g-h)Kopeh Dagh, i-j)Zagros}
+\includegraphics[scale=0.28]{figures/pdf/figure-07.pdf} 
+\caption{Magnitude-time distribution of earthquakes in the study regions. a-b) Alborz, c-d) Azerbaijan, e-f)Central, g-h)Kopeh Dagh, i-j)Zagros}
 \label{fig:comp_test_all_mag}
 \end{figure*}
 
