--- a/content.tex
+++ b/content.tex
@@ -9,13 +9,13 @@
 
  \input{analysis_parameters}
 
-% \input{hazard_analysis_results}
+ \input{hazard_analysis_results}
 
-% \input{discussion_of_results}
+\input{discussion_of_results}
 
-% \input{conclusion}    
+ \input{conclusion}    
 
-% \input{Acknowledgements}
+ \input{Acknowledgements}
 
 
 
