--- a/discussion_of_results.tex
+++ b/discussion_of_results.tex
@@ -33,7 +33,7 @@ Results are presented for different models. In general in the models based on co
 
 
 \noindent
-Different probabilistic seismic hazard analysis for different part of the study region have been conducted. 
+Using different approaches, probabilistic seismic hazard analyses have been conducted for the northern Iran.
 \citet{Tavakoli1999}, based on probabilisitic seismic computation using the historical and instrumental earthquake data, geology, tectonics, fault activity and seismic source model in Iran, prepared a new seismic hazard map of Iran. They divided Iran into 20 seismic tectonic regions and used seismic data up to 1997. They used \citet{Kijko1992} method  to determine the seismicity parameters.
 The results were displayed for the return period of 75 and 475 years. They predicted the maximum mean acceleration, near north Tabriz fault zone, North Tehran fault zone, and Dasht-e-Bayaz fault zone, to be around 0.45g for return period of 475 years. The smallest value of 0.35g for 475 years is predicted in a narrow band trending NW-SE and extending from Urmia to Isfahan.  
 
@@ -56,12 +56,12 @@ Using  EZ-FRISK computer program and considering $M_{min} = 4$ as a minimum magn
 \citet{Abdollahzadeh2014a} carried out a probabilistic seismic hazard assessment for part of Northern Iran. They used the logic tree approach to capture the epistemic uncertainty of seismic hazard assessment in delineation of seismic sources and selection of attenuation relationship. They used three attenuation relationships and 2 seismic source models. They collected the earthquake catalog from various references and reported the pga for 475 and 2475 years of return period for northern cities.   
 
 \noindent
-\citet{Golara2014} conducted a probabilistic seismic hazard analysis of interconnected infrastructure of Iranian high pressure gas supply system. He used line and area source model in order to estimate the Iranian  high-pressure gas supply system's ability to withstand a sudden large ground movements caused by potential earthquakes and related phenomenon that might be expected. he used simplified tectonic map after \citet{Alavi1991}. He used four attenuation relationships. he presented the results for 2475 years of return period. 
+\citet{Golara2014} conducted a probabilistic seismic hazard analysis of interconnected infrastructure of Iranian high pressure gas supply system. He used line and area source model in order to estimate the Iranian  high-pressure gas supply system's ability to withstand a sudden large ground movements caused by potential earthquakes and related phenomenon that might be expected. he used simplified tectonic map after \citet{Alavi1991}. He used four attenuation relationships and presented the results for 2475 years of return period. 
 
 \noindent
 \citet{Boostan2015} developed new model for probabilistic seismic hazard assessment based on fuzzy sets theory for Tehran, Iran. The results is about 0.42-0.48 g for 475 years. 
 
-Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities in northern Iran from different studies. This study 
+Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities in northern Iran from different studies. This study values are results of 5-region model with $M_w > 4.5 $.
 
 
 
@@ -101,7 +101,7 @@ Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities 
 
 
 \subsection{$\pm \sigma$ of attenuation relationship}
-In this study we use one attenuation relationship (See the discussion in the attenuation relationship section). In order to consider the uncertainty of the ground motion equation we also present the $\pm$ standard deviation of each seismic hazard model. These figures give an idea about the range of probable peak ground acceleration for 10\% and 2\% probability of exceedance in 50 years. Fig.~\ref{fig:pga_10_minus_plus} and Fig.~\ref{fig:pga_2_minus_plus} show the results of + and - standard deviation of attenuation relationship, respectively. These figures show the variation of peak ground acceleration for each model. However, due to inability of the earth to carry more intense seismic waves, there is almost certainly some true physical upper bound on ground motion intensity \citep{Baker2008}
+In this study we use one attenuation relationship (See the discussion in the attenuation relationship section). In order to consider the uncertainty of the ground motion equation we also present the $\pm$ standard deviation of each seismic hazard model. These figures give an idea about the range of probable peak ground acceleration for 10\% and 2\% probability of exceedance in 50 years. Fig.~\ref{fig:pga_10_minus_plus} and Fig.~\ref{fig:pga_2_minus_plus} show the results of plus and minus standard deviation of attenuation relationship, respectively. These figures show the variation of peak ground acceleration for each model. However, due to inability of the earth to carry more intense seismic waves, there is almost certainly some true physical upper bound on ground motion intensity \citep{Baker2008}
 
 
 \begin{figure*} [!ht]
