--- a/hazard_analysis_results.tex
+++ b/hazard_analysis_results.tex
@@ -2,12 +2,12 @@
 
 The PGA hazard maps have been computed for a 10\% and 2\% exceedance probability in 50 years, corresponding to a return period of 475 and 2475 years, from gridded values of historical and instrumental seismic activity. These levels of exceedance are a standard practice in seismic designs \citep{BHRC2014}.\\
 \noindent
-Even though in this study we are interested in investigating seismic hazard study in the northern Iran, in the smoothed seismicity method we defined the border of the study region broadly enough to ensure that the seismicity outside of the border doesn't affect the study area.  In addition, the border of the influenced area should surround the area of interest as uniformly as possible \citep{Lapajne1997}. Therefore, our study region includes parts of central Iran and the Zagros tectonic seismic regions.\\
+As mentioned earlier we broader the study region by 0.5\textdegree{}-perimeter to avoid the unexpected effect of outer border seismicity as well as avoiding the artifcial decay effect that results from smoothing the seismicity along and near the edges of the region of interest. Also it provides more uniform surrounding of the study area\citep{Lapajne1997}.
 \noindent
 We calculated the $a-values$ for each cell and spatially smoothed over a grid of $0.1 \times 0.1$ in latitude and longitude. We assume magnitude increment as $\Delta_M = 0.1$. In this model, events are not assigned to specific faults and are assumed to be potential seismogenic sources, and are spatially gridded to cells. \\
 \noindent
 Different correlation distances have been used in different studies, which are generally dependent on the accuracy of the location of the recorded earthquakes. \citet{Frankel1995} and \citet{Boyd2008} assumed the correlation distance to be 50 $km$. \citet{Barani2007} used distance of 25 $km$ based on previous studies that suggested the correlation function of the Alps and Apennines in Italy. \citet{Foteva2006} used 10 and 15 km in a different model. Correlation distance is a very sensitive parameter in smoothed seismic hazard maps, and it is a factor of uncertainty in earthquake location.
-Regarding the important parameters in determining the location of earhtquake (e.g. velocity model, station distribution, number and quality of seismic phases),\citet{Mirzaei1997} believes the uncertainties of the most reliable epicenters are probably at least 10 km. In developing of seismic hazard zoning map for Iran,\citet{Zare2012} considered the epicentral uncertainty as 30 km. Even though the uncertainties are different for different events in terms of instrumental or historical events, in this study we assumed the correlation distance as 30 km because of the lack of knowledge about other historical events. Regarding the study domain and the 0.1 grid size, the total number of source is grid sites is 13561. Even though \citet{Kalkan2004} derived the attenuation relationship up to 250 km, since \citet{Zafarani2014} used data up to 200 km to evaluate the GMPEs, we set the model to compute the ground motions at distances of less than 200 km.
+Regarding the important parameters in determining the location of earhtquake (e.g. velocity model, station distribution, number and quality of seismic phases),\citet{Mirzaei1997} believes the uncertainties of the most reliable epicenters are probably at least 10 km. In developing of seismic hazard zoning map for Iran,\citet{Zare2012} considered the epicentral uncertainty as 30 km. Even though the uncertainties are different for different events in terms of instrumental or historical events, in this study we assumed the correlation distance as 30 km because of the lack of knowledge about other historical events. Regarding the study domain and the 0.1 grid size, the total number of source as grid points is 13561. Even though \citet{Kalkan2004} derived the attenuation relationship up to 250 km, since \citet{Zafarani2014} used data up to 200 km to evaluate the GMPEs, we set the model to compute the ground motions at distances of less than 200 km.
 
 
 \subsection{Hazard Curve}
@@ -22,7 +22,7 @@ We calculated the probability of exceedance of the ground motion from different 
 
 
 
-\subsection{5 Regions}
+\subsection{Peak Ground Acceleration}
 We pick the peak ground acceleration for 10\% and 2\% probability of exceedance in 50 years which correspond with 0.002 and 0.0004 annual rate of exceedance. 
 Fig.~\ref{fig:pga_10_mean} and Fig.~\ref{fig:pga_2_mean} show the results for 10\% and 2\% probability of exceedance in 50 years, respectively. These results are according to the mean value of the attenuation relationship.
 
@@ -41,7 +41,7 @@ Fig.~\ref{fig:pga_10_mean} and Fig.~\ref{fig:pga_2_mean} show the results for 10
 \end{figure*}
 
 
-\subsection{Uniform Region}
+
 Fig.~\ref{fig:pga_10_mean_uniform} and Fig.~\ref{fig:pga_2_mean_uniform} show the results for 10\% and 2\% probability of exceedance in 50 years for the uniform model, respectively.
 
 
@@ -63,9 +63,6 @@ Fig.~\ref{fig:pga_10_mean_uniform} and Fig.~\ref{fig:pga_2_mean_uniform} show th
 
 
 
-
-
-%\subsection{3 Regions}
 
 
 
